# pacman

./: pyproject.toml
.helix/: languages.toml
assets/levels/: level_1.txt
src/: debug.py  game.py  main.py  settings.py
src/entities/: entity.py  ghost.py  player.py  wall.py
src/pacman/: debug.py  game.py  level.py  settings.py  ui.py
